<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottomSheet"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_action"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/actionUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="30dp"
        android:padding="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_update" />

    <TextView
        android:id="@+id/actionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="30dp"
        android:padding="16dp"
        android:text="@string/delete"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_delete" />


</LinearLayout>