<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:background="@color/colorBackground"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_condensed_light"
            android:gravity="center_vertical"
            android:text="@string/blogging_app"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/enter_email"
            android:background="@drawable/comment_edit_text"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/password"
            android:background="@drawable/comment_edit_text"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEmail" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@id/txtPassword">

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_vertical"
                android:text="@string/don_t_have_an_account_yet"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnOpenRegister"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_condensed_bold"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/redButton"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/redButton"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>