<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.NewPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPostDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/enter_description"
                android:background="@drawable/rounded_background"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgCaption"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCaption"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_caption"
                app:layout_constraintBottom_toBottomOf="@+id/txtPostDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtPostDescription" />

            <ImageView
                android:id="@+id/imgImages"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/holder2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/holder2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgImages"
                app:layout_constraintTop_toBottomOf="@id/txtPostDescription"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPostImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="@id/holder2"
                    app:layout_constraintEnd_toEndOf="@id/holder2"
                    app:layout_constraintStart_toStartOf="@id/holder2"
                    app:layout_constraintTop_toTopOf="@id/holder2"
                    app:spanCount="4"
                    tools:listitem="@layout/item_container_post_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_condensed_light"
            android:gravity="center_vertical"
            android:text="@string/blogging_app"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F0C906"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/post"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>